--- a/src/app/landing-page/register/register.component.scss
+++ b/src/app/landing-page/register/register.component.scss
@@ -90,6 +90,10 @@ a {
       }
     }
 
+    .input-error {
+      outline: solid 1px var(--error-color);
+    }
+
     .next-button {
       width: 50%;
       display: flex;
