--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.scss
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.scss
@@ -54,6 +54,27 @@
   }
 }
 
+.thread-own {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: flex-end; 
+
+  span:first-of-type {
+    color: var(--purple3-color);
+    min-width: 113px;
+
+    &:hover {
+      font-weight: 700 !important;
+    }
+  }
+
+  span:last-of-type {
+    color: var(--grey-color);
+    font-size: 14px;
+  }
+}
+
 .attachment-container {
   display: flex;
   gap: 10px;
