--- a/src/app/main/private-chat/thread-private-chat/own-thread-private-message-template/own-thread-private-message-show/own-thread-private-message-show.component.html
+++ b/src/app/main/private-chat/thread-private-chat/own-thread-private-message-template/own-thread-private-message-show/own-thread-private-message-show.component.html
@@ -27,7 +27,7 @@
   
     <app-message-reactions
       [message]="message"
-      [component]="'channel'"
+      [component]="'privateChat'"
       *ngIf="message?.reactions?.length > 0"
     ></app-message-reactions>
   </section>
