--- a/src/app/main/private-chat/thread-private-chat/own-thread-private-message-template/own-thread-private-message-template.component.html
+++ b/src/app/main/private-chat/thread-private-chat/own-thread-private-message-template/own-thread-private-message-template.component.html
@@ -90,7 +90,7 @@
     <mat-menu xPosition="after" #emojiMenu>
       <app-emoji-picker
         [message]="message"
-        [component]="'channel'"
+        [component]="'privateChat'"
       ></app-emoji-picker>
     </mat-menu>
   </section>
