Added observables to the private thread to show the reactions in lifetime.

--- a/src/app/main/private-chat/thread-private-chat/own-thread-private-message-template/own-thread-private-message-show/own-thread-private-message-show.component.html
+++ b/src/app/main/private-chat/thread-private-chat/own-thread-private-message-template/own-thread-private-message-show/own-thread-private-message-show.component.html
@@ -1,4 +1,4 @@
-<section class="text-container">
+<section class="text-container" *ngIf="message$ | async as message">
     <div class="name-and-time-own">
       <span class="name" (click)="userService.openProfileInfo(message?.userId)">{{
         displayName || "Lädt..."
