--- a/src/app/main/private-chat/thread-private-chat/other-thread-private-message-template/other-thread-private-message-template.component.html
+++ b/src/app/main/private-chat/thread-private-chat/other-thread-private-message-template/other-thread-private-message-template.component.html
@@ -1,4 +1,4 @@
-<section>
+<section *ngIf="message$ | async as message">
     <div class="add-emoji-container">
       <div
         class="inner-add-emoji-container"
