Logo animation small changes

--- a/src/app/landing-page/login/login.component.scss
+++ b/src/app/landing-page/login/login.component.scss
@@ -335,7 +335,7 @@ a {
   }
   100% {
     gap: 16px;
-    transform: translate(calc(-50vw + 50% + 2vw), calc(-50vh + 50% + 2vh));
+    transform: translate(calc(-50vw + 50% + 2vw), calc(-50vh + 50% - 3vh));
   }
 }
 
