Fixed some bugs at private thread.

--- a/src/app/main/private-chat/chat-components/other-private-message-template/other-private-message-template.component.scss
+++ b/src/app/main/private-chat/chat-components/other-private-message-template/other-private-message-template.component.scss
@@ -7,6 +7,7 @@ section {
   color: black;
   font-family: var(--font-nunito);
   white-space: pre-wrap;
+  overflow-x: hidden;
 }
 
 .chat-history-daily-container-other-people {
