--- a/src/app/main/private-chat/thread-private-chat/other-thread-private-message-template/other-thread-private-message-template.component.html
+++ b/src/app/main/private-chat/thread-private-chat/other-thread-private-message-template/other-thread-private-message-template.component.html
@@ -1,77 +1,78 @@
-<section *ngIf="message$ | async as message">
-    <div class="add-emoji-container">
-      <div
-        class="inner-add-emoji-container"
-        (mouseover)="showEmojiContainer(1)"
-        (mouseout)="hideEmojiContainer()"
-        [ngClass]="{
-          'inner-add-emoji-container-show': isEmojiContainerVisible === 1
-        }"
-        id="add-emoji-container2"
-      >
-        <div
-          [matMenuTriggerFor]="emojiMenu"
-          (menuOpened)="menuOpened()"
-          (menuClosed)="menuClosed()"
-        >
-          <mat-icon class="material-symbols-outlined">add_reaction</mat-icon>
-        </div>
-      </div>
-    </div>
-  
+<section>
+  <div class="add-emoji-container">
     <div
-      class="message-container"
+      class="inner-add-emoji-container"
       (mouseover)="showEmojiContainer(1)"
       (mouseout)="hideEmojiContainer()"
       [ngClass]="{
-        'message-container-hover': isEmojiContainerVisible === 1
+        'inner-add-emoji-container-show': isEmojiContainerVisible === 1
       }"
+      id="add-emoji-container2"
     >
-      <img
-        src="{{ photoURL }}"
-        alt="Profile Picture"
-        (click)="userService.openProfileInfo(message?.userId)"
-      />
-      <div class="text-container">
-        <div class="name-and-time">
-          <span
-            class="name"
-            (click)="userService.openProfileInfo(message?.userId)"
-            >{{ displayName || "Lädt..." }}</span
+      <div
+        [matMenuTriggerFor]="emojiMenu"
+        (menuOpened)="menuOpened()"
+        (menuClosed)="menuClosed()"
+      >
+        <mat-icon class="material-symbols-outlined">add_reaction</mat-icon>
+      </div>
+    </div>
+  </div>
+
+  <div
+    class="message-container"
+    (mouseover)="showEmojiContainer(1)"
+    (mouseout)="hideEmojiContainer()"
+    [ngClass]="{
+      'message-container-hover': isEmojiContainerVisible === 1
+    }"
+  >
+    <img
+      src="{{ photoURL }}"
+      alt="Profile Picture"
+      (click)="userService.openProfileInfo(message?.userId)"
+    />
+    <div class="text-container">
+      <div class="name-and-time">
+        <span
+          class="name"
+          (click)="userService.openProfileInfo(message?.userId)"
+          >{{ displayName || "Lädt..." }}</span
+        >
+        <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
+      </div>
+      <span class="message">
+        <p>{{ message?.content }}</p>
+        <div
+          *ngIf="message?.attachmentUrls?.length > 0"
+          class="attachment-container"
+        >
+          <a
+            *ngFor="let attachmentUrl of message.attachmentUrls"
+            [href]="attachmentUrl"
           >
-          <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
-        </div>
-        <span class="message">
-          <p>{{ message?.content }}</p>
-          <div
-            *ngIf="message?.attachmentUrls?.length > 0"
-            class="attachment-container"
-          >
-            <a
-              *ngFor="let attachmentUrl of message.attachmentUrls"
-              [href]="attachmentUrl"
+            <app-attachment-preview
+              [actualAttachmentUrls]="[attachmentUrl]"
+              [message]="message"
             >
-              <app-attachment-preview
-                [actualAttachmentUrls]="[attachmentUrl]"
-                [message]="message"
-              >
-              </app-attachment-preview>
-            </a>
-          </div>
-        </span>
+            </app-attachment-preview>
+          </a>
+        </div>
+      </span>
+      <div *ngIf="message$ | async as currentMessage">
         <app-message-reactions
-          [message]="message"
+          [message]="currentMessage"
           [component]="'privateChat'"
-          *ngIf="message?.reactions?.length > 0"
+          *ngIf="message?.reactions?.length > 0 && !threadMessage"
         ></app-message-reactions>
       </div>
     </div>
-  
-    <mat-menu xPosition="after" #emojiMenu>
-      <app-emoji-picker
-        [message]="message"
-        [component]="'privateChat'"
-      ></app-emoji-picker>
-    </mat-menu>
-  </section>
-  
+  </div>
+
+  <mat-menu xPosition="after" #emojiMenu>
+    <app-emoji-picker
+      [message]="message"
+      [component]="'privateChat'"
+    ></app-emoji-picker>
+  </mat-menu>
+</section>
