--- a/src/app/main/private-chat/thread-private-chat/own-thread-private-message-template/own-thread-private-message-show/own-thread-private-message-show.component.html
+++ b/src/app/main/private-chat/thread-private-chat/own-thread-private-message-template/own-thread-private-message-show/own-thread-private-message-show.component.html
@@ -1,33 +1,40 @@
-<section class="text-container" *ngIf="message$ | async as message">
-    <div class="name-and-time-own">
-      <span class="name" (click)="userService.openProfileInfo(message?.userId)">{{
-        displayName || "Lädt..."
-      }}</span>
-      <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
-    </div>
-    <span class="message-own">
-      <p>{{ message?.content }}</p>
-      <div
-        *ngIf="message?.attachmentUrls?.length > 0"
-        class="attachment-container"
+<section class="text-container">
+  <div class="name-and-time-own">
+    <span class="name" (click)="userService.openProfileInfo(message?.userId)">{{
+      displayName || "Lädt..."
+    }}</span>
+    <span class="time">{{ message?.time | date : "HH:mm" }} Uhr</span>
+  </div>
+  <span class="message-own">
+    <p>{{ message?.content }}</p>
+    <div
+      *ngIf="message?.attachmentUrls?.length > 0"
+      class="attachment-container"
+    >
+      <a
+        *ngFor="let attachmentUrl of message.attachmentUrls"
+        [href]="attachmentUrl"
       >
-        <a
-          *ngFor="let attachmentUrl of message.attachmentUrls"
-          [href]="attachmentUrl"
+        <app-attachment-preview
+          [actualAttachmentUrls]="[attachmentUrl]"
+          [message]="message"
+          [messageId]="message.messageId"
         >
-          <app-attachment-preview
-            [actualAttachmentUrls]="[attachmentUrl]"
-            [message]="message"
-            [messageId]="message.messageId"
-          >
-          </app-attachment-preview>
-        </a>
-      </div>
-    </span>
-  
+        </app-attachment-preview>
+      </a>
+    </div>
+  </span>
+
+  <app-message-reactions
+    [message]="message"
+    [component]="'privateChat'"
+    *ngIf="message?.reactions?.length > 0 && threadMessage"
+  ></app-message-reactions>
+  <div *ngIf="message$ | async as message">
     <app-message-reactions
       [message]="message"
       [component]="'privateChat'"
-      *ngIf="message?.reactions?.length > 0"
+      *ngIf="message?.reactions?.length > 0 && !threadMessage"
     ></app-message-reactions>
-  </section>
+  </div>
+</section>
