Added a function to check if the attachment exists at a channel message.

--- a/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
+++ b/src/app/main/main-message-area/chat-components/other-message-template/other-message-template.component.html
@@ -67,7 +67,7 @@
       <span class="message">
         <p>{{ message?.content }}</p>
         <div
-          *ngIf="message?.attachmentUrls?.length > 0"
+          *ngIf="message?.attachmentUrls?.length > 0 && attachment"
           class="attachment-container"
         >
           <a
