--- a/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
+++ b/src/app/main/main-message-area/chat-components/own-message-template/own-message-show/own-message-show.component.html
@@ -8,7 +8,7 @@
   <span class="message-own">
     <p>{{ message?.content }}</p>
     <div
-      *ngIf="message?.attachmentUrls?.length > 0"
+      *ngIf="message?.attachmentUrls?.length > 0 && attachment"
       class="attachment-container"
     >
       <a
