--- a/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.html
+++ b/src/app/main/private-chat/chat-components/own-private-message-template/own-private-message-show/own-private-message-show.component.html
@@ -14,8 +14,10 @@
         class="attachment-container"
       >
         <app-attachment-preview
+        *ngIf="attachmentUrl && !isAttachmentRemoved(attachmentUrl)"
           [actualAttachmentUrls]="[attachmentUrl]"
           [message]="message"
+          (attachmentRemoved)="onAttachmentRemoved($event)"
         >
         </app-attachment-preview>
       </a>
