--- a/src/app/main/private-chat/thread-private-chat/other-thread-private-message-template/other-thread-private-message-template.component.html
+++ b/src/app/main/private-chat/thread-private-chat/other-thread-private-message-template/other-thread-private-message-template.component.html
@@ -54,6 +54,8 @@
             <app-attachment-preview
               [actualAttachmentUrls]="[attachmentUrl]"
               [message]="message"
+              *ngIf="attachmentUrl && !isAttachmentRemoved(attachmentUrl)"
+              (attachmentRemoved)="onAttachmentRemoved($event)"
             >
             </app-attachment-preview>
           </a>
