--- a/src/app/main/private-chat/thread-private-chat/own-thread-private-message-template/own-thread-private-message-show/own-thread-private-message-show.component.html
+++ b/src/app/main/private-chat/thread-private-chat/own-thread-private-message-template/own-thread-private-message-show/own-thread-private-message-show.component.html
@@ -19,6 +19,8 @@
           [actualAttachmentUrls]="[attachmentUrl]"
           [message]="message"
           [messageId]="message.messageId"
+          *ngIf="attachmentUrl && !isAttachmentRemoved(attachmentUrl)"
+          (attachmentRemoved)="onAttachmentRemoved($event)"
         >
         </app-attachment-preview>
       </a>
