Changed the imprint and privacy policy to the actual dates.

--- a/src/app/shared/components/imprint/imprint.component.html
+++ b/src/app/shared/components/imprint/imprint.component.html
@@ -9,17 +9,15 @@
     </div>
 
     <p>
-      Mr. Mustermann<br />
-      Test Stra&szlig;e, 123<br />
-      12345 Musterort
+      Robin Gerth<br />
+      Hebelweg 63<br />
+      79713 Bad Säckingen
     </p>
 
     <section>
       <h2>Kontakt</h2>
       <p>
-        <b>Telefon:</b> +49 (0) 123 44 55 66<br />
-        <b>Telefax:</b> nicht vorhanden.<br />
-        <b>E-Mail:</b> email.adresse&#64;mail.de
+        <b>E-Mail: </b> <a href="mailto:kontakt@robin-gerth.de" class="link">kontakt&#64;robin-gerth.de</a>
       </p>
     </section>
   </mat-card>
