--- a/src/app/shared/components/privacy-policy/privacy-policy.component.html
+++ b/src/app/shared/components/privacy-policy/privacy-policy.component.html
@@ -20,55 +20,55 @@
     <p>Stand: 24. November 2024</p>
     <h2>Inhaltsübersicht</h2>
     <ul class="index">
-      <li><a class="index-link" href="#m4158">Präambel</a></li>
-      <li><a class="index-link" href="#m3">Verantwortlicher</a></li>
+      <li><a class="link" href="#m4158">Präambel</a></li>
+      <li><a class="link" href="#m3">Verantwortlicher</a></li>
       <li>
-        <a class="index-link" href="#mOverview">Übersicht der Verarbeitungen</a>
+        <a class="link" href="#mOverview">Übersicht der Verarbeitungen</a>
       </li>
       <li>
-        <a class="index-link" href="#m2427">Maßgebliche Rechtsgrundlagen</a>
+        <a class="link" href="#m2427">Maßgebliche Rechtsgrundlagen</a>
       </li>
-      <li><a class="index-link" href="#m27">Sicherheitsmaßnahmen</a></li>
+      <li><a class="link" href="#m27">Sicherheitsmaßnahmen</a></li>
       <li>
-        <a class="index-link" href="#m24">Internationale Datentransfers</a>
+        <a class="link" href="#m24">Internationale Datentransfers</a>
       </li>
       <li>
-        <a class="index-link" href="#m12"
+        <a class="link" href="#m12"
           >Allgemeine Informationen zur Datenspeicherung und Löschung</a
         >
       </li>
       <li>
-        <a class="index-link" href="#m10">Rechte der betroffenen Personen</a>
+        <a class="link" href="#m10">Rechte der betroffenen Personen</a>
       </li>
       <li>
-        <a class="index-link" href="#m225"
+        <a class="link" href="#m225"
           >Bereitstellung des Onlineangebots und Webhosting</a
         >
       </li>
-      <li><a class="index-link" href="#m134">Einsatz von Cookies</a></li>
+      <li><a class="link" href="#m134">Einsatz von Cookies</a></li>
       <li>
-        <a class="index-link" href="#m367"
+        <a class="link" href="#m367"
           >Registrierung, Anmeldung und Nutzerkonto</a
         >
       </li>
-      <li><a class="index-link" href="#m432">Community Funktionen</a></li>
-      <li><a class="index-link" href="#m451">Single-Sign-On-Anmeldung</a></li>
+      <li><a class="link" href="#m432">Community Funktionen</a></li>
+      <li><a class="link" href="#m451">Single-Sign-On-Anmeldung</a></li>
     </ul>
     <h2 id="m3">Verantwortlicher</h2>
     <p>
-      Gruppe 376, DABubble<br />Test Straße, 123<br />12345, Musterort,
-      Deutschland
+      Robin Gerth<br />Hebelweg 63<br />79713 Bad Säckingen, Deutschland
     </p>
     <p>
       E-Mail-Adresse:
-      <a href="mailto:email.adresse@mail.de">email.adresse&#64;mail.de</a>
+      <a href="mailto:kontakt@robin-gerth.de" class="link">kontakt&#64;robin-gerth.de</a>
     </p>
     <p>
       Impressum:
-      <a href="http://localhost:4200/imprint" target="_blank"
-        >http://localhost:4200/imprint</a
+      <a (click)="navigateToImprint()" target="_blank" class="link"
+        >https://www.robin-gerth.de/angular-projects/DABubble/impressum</a
       >
     </p>
+    
 
     <h2 id="mOverview">Übersicht der Verarbeitungen</h2>
     <p>
@@ -229,7 +229,7 @@
       EU-Kommission entnommen werden:
       <a
         href="https://commission.europa.eu/law/law-topic/data-protection/international-dimension-data-protection_en?prefLang=de"
-        target="_blank"
+        target="_blank" class="link"
         >https://commission.europa.eu/law/law-topic/data-protection/international-dimension-data-protection_en?prefLang=de.</a
       >
       Im Rahmen des sogenannten „Data Privacy Framework" (DPF) hat die
@@ -238,7 +238,7 @@
       sicher anerkannt. Die Liste der zertifizierten Unternehmen als auch
       weitere Informationen zu dem DPF können Sie der Website des
       Handelsministeriums der USA unter
-      <a href="https://www.dataprivacyframework.gov/" target="_blank"
+      <a href="https://www.dataprivacyframework.gov/" target="_blank" class="link"
         >https://www.dataprivacyframework.gov/</a
       >
       (in Englisch) entnehmen. Wir informieren Sie im Rahmen der
@@ -480,10 +480,10 @@
           ><strong>Rechtsgrundlagen:</strong> Berechtigte Interessen (Art. 6
           Abs. 1 S. 1 lit. f) DSGVO); </span
         ><strong>Website:</strong>
-        <a href="https://all-inkl.com/" target="_blank">https://all-inkl.com/</a
+        <a href="https://all-inkl.com/" target="_blank" class="link">https://all-inkl.com/</a
         >;
         <strong>Datenschutzerklärung:</strong>
-        <a href="https://all-inkl.com/datenschutzinformationen/" target="_blank"
+        <a href="https://all-inkl.com/datenschutzinformationen/" target="_blank" class="link"
           >https://all-inkl.com/datenschutzinformationen/</a
         >. <strong>Auftragsverarbeitungsvertrag:</strong> Wird vom
         Dienstanbieter bereitgestellt.
@@ -855,15 +855,15 @@
           ><strong>Rechtsgrundlagen:</strong> Berechtigte Interessen (Art. 6
           Abs. 1 S. 1 lit. f) DSGVO); </span
         ><strong>Website:</strong>
-        <a href="https://www.google.de" target="_blank">https://www.google.de</a
+        <a href="https://www.google.de" target="_blank" class="link">https://www.google.de</a
         >;
         <strong>Datenschutzerklärung:</strong>
-        <a href="https://policies.google.com/privacy" target="_blank"
+        <a href="https://policies.google.com/privacy" target="_blank" class="link"
           >https://policies.google.com/privacy</a
         >; <strong>Grundlage Drittlandtransfers:</strong> Data Privacy Framework
         (DPF). <strong>Widerspruchsmöglichkeit (Opt-Out):</strong> Einstellungen
         für die Darstellung von Werbeeinblendungen:
-        <a href="https://myadcenter.google.com/" target="_blank"
+        <a href="https://myadcenter.google.com/" target="_blank" class="link"
           >https://myadcenter.google.com/</a
         >.
       </li>
@@ -874,6 +874,7 @@
         title="Rechtstext von Dr. Schwenke - für weitere Informationen bitte anklicken."
         target="_blank"
         rel="noopener noreferrer nofollow"
+        class="link"
         >Erstellt mit kostenlosem Datenschutz-Generator.de von Dr. Thomas
         Schwenke</a
       >
